@@ -1,7 +1,7 @@
 Package: R.filesets
 Version: 2.3.9
 Depends: R (>= 2.15.0), R.oo (>= 1.15.8)
-Imports: stats, R.methodsS3 (>= 1.5.2), R.utils (>= 1.28.4), R.cache (>= 0.9.0), digest (>= 0.6.4)
+Imports: stats, R.methodsS3 (>= 1.6.1), R.utils (>= 1.28.4), R.cache (>= 0.9.0), digest (>= 0.6.4)
 Suggests: gtools (>= 3.1.1)
 Date: 2014-01-05
 Title: Easy handling of and access to files organized in structured directories
